# LoginPage

./: CMakeLists.txt  README.md  main.cpp  main.h  main.qml  qt-build.md
src/: CMakeLists.txt  main.cpp
src/Controllers/: CMakeLists.txt
src/Controllers/include/Controllers/: LoginController.h
src/Controllers/include/DTOs/: AuthenticationData.h
src/Controllers/src/Controllers/: LoginController.cpp
src/DTOs/: CMakeLists.txt
src/DTOs/include/: AuthenticationData.h
src/DTOs/include/DTOs/: AuthenticationData.h
src/DTOs/src/: AuthenticationData.cpp
src/Services/: CMakeLists.txt
src/Services/include/: AuthenticationService.h
src/Services/include/Services/: AuthenticationService.h
src/Services/src/: AuthenticationService.cpp
src/Views/: CMakeLists.txt  main.qml  qmlSources.qrc
src/Views/loginPage/: Authentication.qml  MLoginPage.qml  qmldir
